o minors in XTableCG   - in order to get correct border collapsing in IE an additional style was needed which indicates that an XTable has no data
git-svn-id: https://j-wings.svn.sourceforge.net/svnroot/j-wings/wings3/trunk@3797 c8af5dc8-8010-0410-93ac-e0f74e17e1d8

--- a/wings/src/res/org/wings/plaf/css/all.css
+++ b/wings/src/res/org/wings/plaf/css/all.css
@@ -474,7 +474,7 @@ ul.SPopupMenu a.x:hover{
     background-color: #ffbbbb !important;
 }
 
-.STable tr.empty td {
+.STable tr.empty {
     padding-top: 3px;
     padding-bottom: 3px;
 }
@@ -521,7 +521,7 @@ ul.SPopupMenu a.x:hover{
     background-color: #ffbbbb !important;
 }
 
-.XTable tr.empty td {
+.XTable tr.empty {
     padding-top: 2px;
     padding-bottom: 2px;
 }
